Fix GitHub bug: header overflow on homepage on mobile

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -68,3 +68,17 @@
 .dashboard-sidebar .loading-context {
 	min-height: initial !important;
 }
+
+/* Hide elements that are stretching the whole viewport #6159 */
+/* .full-width sort of limits it to the homepage. Other pages aren't affected */
+@media (max-width: 920px) {
+	.full-width .Header-link[href="/marketplace"] {
+		display: none
+	}
+}
+
+@media (max-width: 820px) {
+	.full-width .Header-link[href="/explore"] {
+		display: none
+	}
+}
